--- a/php-ajax-disc/css/style.css
+++ b/php-ajax-disc/css/style.css
@@ -4,11 +4,21 @@
     box-sizing: border-box;
 }
 header {
-    height: 80px;
+    height: 100px;
+    background-color: #0a0a0a;
+    line-height: 100px;
+    padding: 0 70px;
+}
+.box-logo h1 {
+    color: red;
+    font-size: 3rem;
 }
 main {
-    height: calc(100vh - 80px);
+    height: calc(100vh - 100px);
     width: 100%;
+    background-color: #383838;
+    color: white;
+
 }
 .box-songs {
     width: 80%;
@@ -20,7 +30,21 @@ main {
 .box-album {
     width: calc(100% / 5);
     text-align: center;
+    margin-bottom: 30px;
+
 }
 .box-album img{
     width: 90%;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.box-album .box-text {
+    padding-top: 20px;
+}
+.box-text > * {
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+.box-text span {
+    font-size: 1.3rem;
 }
