--- a/php-ajax-disc/css/style.css
+++ b/php-ajax-disc/css/style.css
@@ -21,6 +21,7 @@ main {
     width: 100%;
     background-color: #383838;
     color: white;
+    overflow: auto;
 
 }
 .box-songs {
@@ -34,6 +35,7 @@ main {
     width: calc(100% / 5);
     text-align: center;
     margin-bottom: 30px;
+    min-width: 150px
 
 }
 .box-album img{
