--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,10 @@ body {
 header {
     height: 80px;
     background-color: #0a0a0a;
-    line-height: 80px;
     padding: 0 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .box-logo h1 {
     color: red;
